plugins {
    id("maven-publish") apply false
}

subprojects {
    apply plugin: "maven-publish"
    ext.xtextVersion = '2.18.0.M3'
    group = 'eu.quanticol.moonlight'
    version = '1.0-SNAPSHOT'
    description = 'MoonLight: a light-weight framework for runtime monitoring'
    status = 'status'

    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply from: rootDir.absolutePath + '/module.gradle'

    sourceCompatibility = 8
    targetCompatibility = 8

    repositories {
        jcenter()
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    }


    clean.doFirst {
        delete "${rootDir}/output/"
        println "deleating jars in  ${rootDir}/output/"
    }


    publishing {
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/Quanticol/MoonLight")
                credentials {
                    username = System.getenv("GITHUB_ACTOR")
                    password = System.getenv("GITHUB_TOKEN")
                }
            }
        }
    }
}
